# rust-demo-2025-10-08

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: engine.rs  input.rs  lib.rs  main.rs  output.rs  types.rs
src/engine/: errors.rs  tests.rs
src/engine/cases/: engine-tests-process_transactions-baseline.snap  engine-tests-process_transactions-case_01.snap  engine-tests-process_transactions-case_02.snap  engine-tests-process_transactions-case_03.snap  engine-tests-process_transactions-case_04_a.snap  engine-tests-process_transactions-case_04_b.snap  engine-tests-process_transactions-case_05.snap  engine-tests-process_transactions-case_07.snap  engine-tests-process_transactions-case_08.snap  engine-tests-process_transactions-case_09.snap  engine-tests-process_transactions-case_09.snap.new  engine-tests-process_transactions-case_10.snap  engine-tests-process_transactions-case_11.snap  engine-tests-process_transactions-case_12.snap  engine-tests-process_transactions-case_13.snap  engine-tests-process_transactions-case_14.snap  engine-tests-process_transactions-case_15.snap  engine-tests-process_transactions-case_16.snap
src/input/: impl_serde.rs  tests.rs
src/input/cases/: chargebacks.csv  chargebacks.snap  deposits.csv  deposits.snap  disputes.csv  disputes.snap  resolves.csv  resolves.snap  withdrawals.csv  withdrawals.snap
tests/: run-cli.rs
tests/cases/: case-01.csv  case-01.snap  case-02.csv  case-02.snap  case-03.csv  case-03.snap  case-04.csv  case-04.snap  empty.snap
