[package]
name = "balances"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "^1.3"
fixnum = {version = "^0.9", features = ["i64", "serde"]}
serde = {version = "^1.0", features = ["derive"]}
thiserror = "^2"

[dev-dependencies]
insta = {version = "^1.43", features = ["yaml"]}
test-case = "^3.3"